# easy-data-platform

./: .gitignore  README.md  Start_AI_Expert.bat  Start_Easy_Data.bat  app.py  auth_config.yaml  build_exe.py  check_models.py  debug_gemini_import.py  debug_supabase_connection.py  index.html  launcher.py  requirements.txt  secrets.example.toml  smart_update_secrets.py  supabase_schema.sql  test_email.py  test_import.py  test_integration.py  translations.py  update_secrets.py  verify_updates.py
data_science_master_system/: README.md  Start_App.bat  dashboard.py  ensemble_log.txt  expert_log.txt  final_log.txt  optimize_log.txt  pyproject.toml  run_titanic_ai.bat  ultra_log.txt
data_science_master_system/.github/workflows/: ml_pipeline.yml
data_science_master_system/configs/: README.md
data_science_master_system/configs/environments/: dev.yaml  prod.yaml
data_science_master_system/data/: README.md
data_science_master_system/data/sample_images/: README.md
data_science_master_system/data/sample_tabular/: README.md
data_science_master_system/data/sample_text/: README.md
data_science_master_system/data/sample_time_series/: README.md
data_science_master_system/data_science_master_system/: __init__.py  pipeline.py
data_science_master_system/data_science_master_system/advanced/: __init__.py  graph_neural_networks.py
data_science_master_system/data_science_master_system/automl/: __init__.py  automl_engine.py
data_science_master_system/data_science_master_system/core/: __init__.py  base_classes.py  config_manager.py  exceptions.py  logger.py
data_science_master_system/data_science_master_system/data/: __init__.py
data_science_master_system/data_science_master_system/evaluation/: __init__.py  comparison.py  metrics.py
data_science_master_system/data_science_master_system/features/: __init__.py  expert.py
data_science_master_system/data_science_master_system/logic/: __init__.py  analytical.py  base.py  causal.py  commercial.py  core.py  engineering.py  ethical.py  predictive.py  statistical.py
data_science_master_system/data_science_master_system/models/: __init__.py  model_factory.py
data_science_master_system/data_science_master_system/monitoring/: __init__.py  monitor.py
data_science_master_system/data_science_master_system/optimization/: __init__.py  model_compression.py
data_science_master_system/data_science_master_system/security/: __init__.py  data_privacy.py
data_science_master_system/data_science_master_system/serving/: __init__.py  model_server.py
data_science_master_system/data_science_master_system/streaming/: __init__.py  stream_processor.py
data_science_master_system/data_science_master_system/utils/: __init__.py  decorators.py  helpers.py  validators.py
data_science_master_system/data_science_master_system/visualization/: __init__.py  plotter.py
data_science_master_system/docker/: Dockerfile.dev  Dockerfile.multi  Dockerfile.prod  docker-compose.yml
data_science_master_system/docs/deployment/: aws_deployment.md  azure_deployment.md  gcp_deployment.md
data_science_master_system/examples/notebooks/: README.md
data_science_master_system/kubernetes/: README.md
data_science_master_system/notebooks/: README.md  Untitled.ipynb  _AUTOMATED_SETUP.py  _MASTER_INDEX.py
data_science_master_system/scripts/: README.md  generate_submission.py  optimize_ensemble.py  optimize_titanic.py  optimize_titanic_expert.py  optimize_titanic_final.py  optimize_titanic_ultra.py  test_import.py
data_science_master_system/tests/: test_core.py
(+210 files in other folders)
