[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-science-master-system"
version = "1.0.0"
description = "Enterprise-grade Data Science Master System with 30+ years of industry expertise"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Data Science Master System Team", email = "contact@dsms.io"}
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

keywords = [
    "data-science",
    "machine-learning",
    "deep-learning",
    "mlops",
    "automl",
    "feature-engineering",
    "data-processing",
]

dependencies = [
    # Core
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    
    # Data Processing
    "pandas>=2.0",
    "numpy>=1.24",
    "polars>=0.19",
    "pyarrow>=14.0",
    
    # Machine Learning
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "catboost>=1.2",
    
    # Visualization
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "plotly>=5.18",
    
    # Utilities
    "tqdm>=4.66",
    "joblib>=1.3",
    "requests>=2.31",
    
    # API
    "fastapi>=0.104",
    "uvicorn>=0.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.7",
    "pre-commit>=3.5",
]

deep-learning = [
    "torch>=2.1",
    "tensorflow>=2.15",
]

distributed = [
    "dask>=2023.11",
    "pyspark>=3.5",
    "ray>=2.8",
]

full = [
    "data-science-master-system[dev,deep-learning,distributed]",
]

[project.urls]
Homepage = "https://github.com/dsms/data-science-master-system"
Documentation = "https://dsms.readthedocs.io"
Repository = "https://github.com/dsms/data-science-master-system"

[project.scripts]
dsms = "data_science_master_system.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["data_science_master_system*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "gpu: marks tests requiring GPU",
]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | build
    | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py39"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
ignore = ["E501", "B008", "C901"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
